Implemented admin flag to user. Updated delete recipe functionality to only work for admin users. Updated tests accordingly.